<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp16"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/Team1Title"
            android:textSize="@dimen/sp36" />

        <TextView
            android:id="@+id/tvTeam1Count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tvTeam1Count"
            android:textSize="@dimen/sp36" />

        <ImageButton
            android:id="@+id/imgBtnDecreaseTeam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imgBtnDecreaseTeam1"
            android:onClick="decreaseScore"
            android:src="@drawable/ic_minus" />

        <ImageButton
            android:id="@+id/imgBtnIncreaseTeam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imgBtnIncreaseTeam1"
            android:onClick="increaseScore"
            android:src="@drawable/ic_plus" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/Team2Title"
            android:textSize="@dimen/sp36" />

        <TextView
            android:id="@+id/tvTeam2Count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tvTeam2Count"
            android:textSize="@dimen/sp36" />

        <ImageButton
            android:id="@+id/imgBtnDecreaseTeam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imgBtnDecreaseTeam2"
            android:onClick="decreaseScore"
            android:src="@drawable/ic_minus" />

        <ImageButton
            android:id="@+id/imgBtnIncreaseTeam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imgBtnIncreaseTeam2"
            android:onClick="increaseScore"
            android:src="@drawable/ic_plus" />


    </RelativeLayout>

</LinearLayout>